src/main/default/objects/Account/fields/CheckRecordTypeBehaviour__c.field-meta.xml
<CustomField>
    <fullName>CheckRecordTypeBehaviour__c</fullName>
    <label>CheckRecordTypeBehaviour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>Please</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>