src/main/default/objects/Account/fields/Field_Renamed__c.field-meta.xml
<CustomField>
    <fullName>Field_Renamed__c</fullName>
    <inlineHelpText>For Czechdreamin test purposes only.</inlineHelpText>
    <label>Field For Renaming</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Please</fullName>
            </value>
            <value>
                <fullName>Dont</fullName>
            </value>
            <value>
                <fullName>Ever</fullName>
            </value>
            <value>
                <fullName>Try</fullName>
            </value>
            <value>
                <fullName>This</fullName>
            </value>
            <value>
                <fullName>!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>