src/main/default/objects/Account/recordTypes/B2C_Account.recordType-meta.xml
<RecordType>
    <fullName>B2C_Account</fullName>
    <active>true</active>
    <description>Please select this type for B2C customers.</description>
    <label>B2C Account</label>
</RecordType>